--- a/site/css.css
+++ b/site/css.css
@@ -81,26 +81,47 @@ body{
 	display: inline-block;
   text-align: left;
   position: relative;
-  background-size: 170px 200px;
+}
+.card .cardDesigh{
+    background-size: 170px 200px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+}
+.card .cardImage{
+  width: 95px;
+  height: 95px;
+  position: absolute;
+  top:6px;
+  left: 44px;
+}
+.card .cardImage img{
+  border-top-right-radius: 38px;
+  border-top-left-radius: 38px;
 }
 .card .attack, .card .health, .card .cost{
 	width: 10px;
 	height: 20px;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+  font-weight: bold;
 }
 .card .attack{
 	position: absolute;
-	bottom: 6px;
+	bottom: 10px;
 	left: 21px;
+  font-size: 25px;
 }
 .card .health {
 	position: absolute;
-	bottom: 6px;
+	bottom: 10px;
 	right: 12px;
+  font-size: 25px;
 }
 .card .cost {
 	position: absolute;
-	top: 13px;
-	left: 19px;
+	top: 0px;
+	left: 17px;
+  font-size: 38px;
 }
 .card .data {
     position: absolute;
